[project]
name = "geoserver_rest"
version = "1.0.0"
description = "library to access geoserver rest api"
authors = [{ name = "Rocky Chen", email = "rocky.chen@dbca.wa.gov.au" }]
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.32.0,<3.0.0",
    "Jinja2>=3.1.4,<4.0.0",
    "pyproj>=3.7.1,<4.0.0",
    "psycopg[binary]>=3.2.12,<4.0.0",
    "psutil>=7.2.2,<8.0.0"
]

[dependency-groups]
dev = [
    "ipdb>=0.13.4"
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[tool.uv.sources]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
